plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'roomly'
version = '1.0.0'


java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

configurations {
    mockitoAgent
}

ext {
    projectName = 'ROOMLY'
    projectDescription = 'A household management system built with Spring Boot and GraphQL, featuring multi-tenant household organization, user profiles with customizable avatars, and product lookup integration.'

    developerName = 'Mikołaj Florczak'
    developerUrl = 'https://github/florczaq'
    springBootAdminVersion = "4.0.3"
}

dependencies {
    // === WEB ===
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // === SECURITY ===
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // === GRAPHQL ===
    implementation 'org.springframework.boot:spring-boot-starter-graphql'
    implementation 'com.graphql-java:graphql-java-extended-scalars:21.0'

    // === DATA ===
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'com.h2database:h2'

    // === JSON ===
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    // === VALIDATION ===
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // === CACHE ===
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

    // === JWT ===
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // === SPRING BOOT ADMIN ===
    implementation 'de.codecentric:spring-boot-admin-starter-client'
    implementation 'de.codecentric:spring-boot-admin-starter-server'

    // === DEVELOPMENT ===
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // === LOMBOK ===
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // === TESTING ===
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testImplementation 'org.springframework.graphql:spring-graphql-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.mockito:mockito-core'
    testImplementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'


    mockitoAgent('org.mockito:mockito-core') {
        transitive = false
    }


}
dependencyManagement {
    imports {
        mavenBom "de.codecentric:spring-boot-admin-dependencies:$springBootAdminVersion"
    }
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs "-javaagent:${configurations.mockitoAgent.singleFile}"
}
